...
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/list_item_padding"
    android:paddingTop="@dimen/list_item_padding">

    <CheckBox
        android:id="@+id/todo_complete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
...
