...
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:inputType="text" />

        <EditText
            android:id="@+id/add_task_description"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="top"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
...
